# cqfproject

./: .gitignore  CMakeLists.txt
blacklit/: analyze.R  download.R  main.R  symbols.csv
uvol/: CMakeLists.txt  Rinterface.cpp  avx.hpp  blackScholes.hpp  errorAnalysis.R  examples.R  fd.cpp  fd.hpp  finiteDifferencePricer.cpp  finiteDifferencePricer.hpp  functionAnalysis.R  main.R  main.cpp  optimization.R  optimize.R  optionContract.hpp  payoffAnalysis.R  pricing.R  stopwatch.hpp  types.hpp  utility.R
